# cxr_model

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLAUDE_WIP.md  Dockerfile  README.md  REFINEMENT_PLAN.md  TODO.md  analysis.ipynb  analysis.md  analysis.py  atomic_form_factors.py  claude_WIP.txt  cxr_analysis.ipynb  cxr_analysis_feranchuk.ipynb  cxr_analysis_zhai.ipynb  cxr_feranchuk_spence.py  cxr_montecarlo.py  cxr_scan.ipynb  export_pdf.py  feranchuk_check_script.py  feranchuk_vs_zhai_check.py  kinematic_validity_check.py  main.py  pyproject.toml  pyrightconfig.json  remote.py  run_zhai_nb_test.py  scan.ipynb  scan.md  scan.py  scan_marimo.py  zhai_fig1c_check.ipynb
.claude/: .gitignore  settings.json
.claude/commands/dev/: benchmark.md  profile.md  regression-test.md
.claude/commands/docs/: todo-sync.md  update-repo-map.md
.claude/commands/notebooks/: cleanup.md  convert.md
.claude/commands/paper/: reproduce.md
.claude/commands/physics/: implement.md  review.md  validate.md
.claude/skills/monte-carlo/: SKILL.md
.claude/skills/notebook/: SKILL.md
.claude/skills/physics-review/: SKILL.md
.claude/skills/repo-orientation/: SKILL.md
.claude/skills/scientific-library/: SKILL.md
.github/workflows/: ci.yml
.serena/: project.yml
atomic_scattering_factors/: Li.csv  Mo.csv
checks/: anchor_figures.py  atomic_db_diff.py  atomic_form_factors_xraydb.py  cxr_analysis_feranchuk.ipynb  cxr_analysis_feranchuk.md  detector_solid_angle_check.py  feranchuk_check_script.py  feranchuk_spence.py  feranchuk_vs_zhai_check.py  kinematic_validity_check.py  mosaic_mc_check.py  mosaic_scoping_check.py  multilayer_check.py  multilayer_slice3_check.py  multilayer_validation_check.py  run_zhai_nb_test.py  zhai_fig1c_check.ipynb  zhai_fig1c_check.md  zhai_fig1c_validation.ipynb  zhai_fig1c_validation.md
checks/reference_data/: README.md  zhai_fig1c.example.csv
data/: crystal_structures.toml
data/atomic_scattering_factors/: F.csv  Ge.csv  Si.csv
data/mott_transport_cross_sections/: DisplayCalcTCSTableForC.csv  DisplayCalcTCSTableForGe.csv  DisplayCalcTCSTableForMo.csv
dev/: elsepa_tables.py  remote.py  units_poc.py
docs/: README.md  api.md  atomic-data-sources.md  conf.py  crystal-mosaicity.md  cstool-nebula-evaluation.md  detector-solid-angle.md  elsepa-transport.md  grazing-grating.md  index.md  multilayer-materials.md  physics-validation-ledger.md  repo_map.md  running-on-a-cluster.md  units-evaluation.md
docs/validation/: README.md
scripts/: dev.py
src/: _compile_nb.py  atomic_form_factors.py  config.py  crystallography.py  cxr_config.py  cxr_feranchuk_spence.py  cxr_montecarlo.py  cxr_plots.py  cxr_results.py  cxr_run.py  cxr_sweep.py  eaglexo_response.py  montecarlo.py  plots.py  results.py  run.py  sweep.py  timepix_response.py
src/cxr_mc/: __init__.py  atomic_form_factors.py  cli.py  config.py  crystallography.py  eaglexo_response.py  montecarlo.py  plots.py  results.py  run.py  scan.py  slim.py  sweep.py
src/cxr_mc/data/: eaglexo_qe.csv
src/cxr_mc/data/mott_transport_cross_sections/: DisplayCalcTCSTableForSe.csv
src/cxr_mc/montecarlo/: __init__.py  _backend.py  detector.py  geometry.py  materials.py  runner.py  spectrum.py  transport.py
src/cxr_mc/plots/: __init__.py  _common.py  _style.py  altair_spectra.py  detectors.py  interactive.py  spectra.py  sweeps.py  trajectories.py
src/cxr_model/: __init__.py  _compile_nb.py  cli.py  config.py  crystallography.py  eaglexo_response.py  export.py  grating.py  montecarlo.py  plots.py  results.py  run.py  scan.py  sweep.py  timepix_response.py
src/cxr_model/data/: crystal_structures.toml
src/cxr_model/data/atomic_scattering_factors/: C.csv  Se.csv
src/cxr_model/data/mott_transport_cross_sections/: DisplayCalcTCSTableForSi.csv
tests/: test_altair_plots.py  test_anchor_figures.py  test_crystallography.py  test_detector_solid_angle.py  test_elsepa_tables.py  test_faceting.py  test_form_factors.py  test_grating.py  test_montecarlo.py  test_montecarlo_exports.py  test_mosaic.py  test_mosaic_mc.py  test_multilayer.py  test_plots_exports.py  test_remote.py  test_results.py  test_run.py  test_slim.py  test_sweep.py
