[project]
name = "cxr-model"
version = "0.1.0"
description = "Coherent X-ray radiation (PXR + coherent bremsstrahlung) from table-top electron beams in crystals"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cupy-cuda13x>=14.1.1",
    "datashader>=0.19.1",
    "ipykernel>=7.3.0",
    "ipympl>=0.10.0",
    "jupyter-core>=5.9.1",
    "jupyter-mcp-server>=1.0.2",
    "jupyterlab==4.4.1",
    "matplotlib>=3.11.0",
    "nbconvert>=7.17.1",
    "nbstripout>=0.9.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pandoc>=2.4",
    "plotly>=6.0",
    "scipy>=1.17.1",
    "tabulate>=0.10.0",
    "tqdm>=4.68.2",
    "xraydb>=4.5.8",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
# src/ holds the importable modules (notebooks do sys.path.insert(0,"src")); "."
# lets the suite import the root scripts (remote.py). Tests stay CPU-only/fast --
# the heavy MC physics validation lives in checks/, not here.
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-q"
