[project]
name = "cxr-mc"
version = "0.1.0"
description = "Coherent X-ray radiation (PXR + coherent bremsstrahlung) from table-top electron beams in crystals"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cupy-cuda13x>=14.1.1",
    "datashader>=0.19.1",
    "ipykernel>=7.3.0",
    "ipympl>=0.10.0",
    "jupyter-core>=5.9.1",
    "jupyter-mcp-server>=1.0.2",
    "jupyterlab==4.4.1",
    "jupytext>=1.19.4",
    "matplotlib>=3.11.0",
    "nbconvert>=7.17.1",
    "nbqa>=1.9.1",
    "nbstripout>=0.9.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pandoc>=2.4",
    "plotly>=6.0",
    "pre-commit>=4.6.0",
    "pyright>=1.1.410",
    "ruff>=0.15.19",
    "scipy>=1.17.1",
    "tabulate>=0.10.0",
    "tqdm>=4.68.2",
    "xraydb>=4.5.8",
]

[project.scripts]
cxr = "cxr_mc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cxr_mc"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
# Docs toolchain (Sphinx site). Not a default group, so `uv sync` and the Docker
# image stay lean; build with `uv run --group docs sphinx-build ...`.
docs = [
    "sphinx>=8.2",
    "myst-parser>=4.0",
    "furo>=2024.8.6",
]

[tool.pytest.ini_options]
# Put src/ on the path so `import cxr_mc` resolves without requiring an install
# (an editable install via `uv sync` also works); dev/ lets test_remote.py import
# the demoted remote.py helper. Tests stay CPU-only/fast -- the heavy MC physics
# validation lives in checks/, not here.
pythonpath = ["src", "dev"]
testpaths = ["tests"]
addopts = "-q"

[tool.jupytext]
formats = "ipynb,md:myst"

[tool.pyright]
include = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

# keep this tight; avoid duplicate exclusion logic
exclude = [
    ".venv",
    "__pycache__",
    ".ruff_cache",
    ".pytest_cache",
    "docs/_build",
    "docs/_autosummary",
]

[tool.ruff.lint]
# core useful rules without the “style noise overload”
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # import sorting
    "UP",  # pyupgrade (keeps Python 3.12/3.13 modern)
    "B",   # bugbear (real bugs, not stylistic nitpicks)
]

ignore = [
    "E501",  # long lines in physics formulas/comments
    "E402",  # import-not-at-top — notebook cells have docstrings before imports
    "B008",  # np.deg2rad() in default args — pure math call, not a real bug
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
